# stockAnalyzer

./: .broker_overrides.example.json  .env.example  .gitignore  .ticker_overrides.example.json  .ticker_overrides.json  CLAUDE.md  pyproject.toml
docs/: MOBILE_ACCESS.md
examples/: icici_direct.example.csv  portfolio.example.csv
src/portfolio_intel/: __init__.py  batch.py  digest.py  markets.py  render.py
src/portfolio_intel/backtest/: __init__.py  engine.py  result.py
src/portfolio_intel/brokers/: __init__.py  icici_breeze.py  icici_codes.py
src/portfolio_intel/cli/: main.py
src/portfolio_intel/data/: base.py  finnhub_news.py  models.py  yfinance_source.py
src/portfolio_intel/discovery/: __init__.py  diversification.py  scanner.py  universes.py
src/portfolio_intel/llm/: __init__.py  ollama.py  prompts.py
src/portfolio_intel/news/: __init__.py  router.py  sentiment.py
src/portfolio_intel/options/: __init__.py  expiries.py  pricing.py  stats.py
src/portfolio_intel/portfolio/: brokers.py  csv_import.py  models.py  performance.py  store.py  tax.py  ticker_resolver.py
src/portfolio_intel/scoring/: __init__.py  position.py  rules.py  score.py  setup.py  (+1 more)
tests/: test_backtest.py  test_batch.py  test_brokers.py  test_csv_import.py  test_indicators.py  test_markets.py  test_patterns_and_levels.py  test_prompt.py  test_scoring.py  test_sentiment.py  test_store.py
web/: README.md
web/api/: main.py  schemas.py  serializers.py  state.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+45 files in other folders)
